<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dev_pi_communicate</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="siwakotik89@gmail.com">kuns</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>struct</depend>
  <depend>serial</depend>
  <depend>math</depend>
  <depend>numpy</depend>
  <depend>time</depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
