<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="078bct017.apil@pcampus.edu.np">apil</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv2</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>ultralytics</depend>
  <depend>supervision</depend>
  <depend>numpy</depend>
  <depend>pdb</depend>

  <export>
    <python_path>/media/apil/New\ Volume/venv/yolo/lib/python3.10/site-packages</python_path>
    <build_type>ament_python</build_type>
  </export>
</package>
